crates/oxc_formatter_json/tests/snapshots/conformance__prettier-json-stringify.snap
---
source: crates/oxc_formatter_json/tests/conformance.rs
expression: report
---
json-stringify compatibility: 162/162 (100.00%), 0 files skipped

# Failed

| Spec path | Failed or Passed | Match ratio |
| :-------- | :--------------: | :---------: |
