crates/oxc_formatter_json/tests/snapshots/conformance__prettier-json.snap
---
source: crates/oxc_formatter_json/tests/conformance.rs
expression: report
---
json compatibility: 168/168 (100.00%), 0 files skipped

# Failed

| Spec path | Failed or Passed | Match ratio |
| :-------- | :--------------: | :---------: |
