crates/oxc_formatter_json/tests/snapshots/conformance__prettier-json5.snap
---
source: crates/oxc_formatter_json/tests/conformance.rs
expression: report
---
json5 compatibility: 169/169 (100.00%), 0 files skipped

# Failed

| Spec path | Failed or Passed | Match ratio |
| :-------- | :--------------: | :---------: |
