crates/oxc_formatter_json/tests/snapshots/conformance__prettier-jsonc.snap
---
source: crates/oxc_formatter_json/tests/conformance.rs
expression: report
---
jsonc compatibility: 158/158 (100.00%), 0 files skipped

# Failed

| Spec path | Failed or Passed | Match ratio |
| :-------- | :--------------: | :---------: |
